# ChessEngine

./: .gitignore  CMakeLists.txt
.run/: All.run.xml
include/: BitBoards.cpp  BitBoards.h  BoardGUI.h  ChessPlayer.h  EngineBase.h  Fen.h  HumanPlayer.h  PieceGUI.h  TestEngine.h  VisualBoard.h  VisualPiece.h  gui.h
include/BoardManager/: BitBoards.h  BoardManager.h  Move.h  Referee.cpp  Referee.h  Rules.h
include/CLIEngine/: StandaloneUciPlayer.h
include/Engine/: ChessEngine.h  ChessPlayer.h  CommandHandlerBase.h  EngineBase.h  Evaluation.h  EvaluationValues.h  HumanPlayer.h  MainEngine.h  MoveGenerator.h  PerftResults.h  Piece.cpp  Piece.h  ProcessChessEngine.h  RepetitionTable.cpp  RepetitionTable.h  SearchHelpers.h  SearchTree.h  TestEngine.h  TranspositionTable.h
include/EngineShared/: ChessPlayerAdapter.h  CommandHandlerBase.h  CommunicatorBase.h  PerftResults.h  ProcessChessEngine.cpp  ProcessChessEngine.h  StandaloneEngineWrapper.h  ZobristHash.h
include/EngineShared/UCIParsing/: Tokeniser.h  UciParser.h
include/GUI/: DrawableEntity.h  EvaluationBar.cpp  EvaluationBar.h  OpeningBook.h  PromotionPiecePicker.h  VisualBoard.h  VisualPiece.h  gui.h
include/MagicBitBoardGen/: MagicBitboardGenerator.h  MagicNumberGenerator.h
include/MagicBitboards/: MagicBitBoardShared.h  MagicBitBoards.h
include/MatchManager/: ManagerCommandHandler.cpp  ManagerCommandHandler.h  MatchManager.h
include/UCIParsing/: Tokeniser.h  UciParser.h
include/Utility/: ChessUtility.h  Fen.h  Vec2D.h  math.h
src/: BoardGUI.cpp  ChessPlayer.cpp  DrawableEntity.cpp  EngineBase.cpp  HumanPlayer.cpp  PieceGUI.cpp  TestEngine.cpp  Vec2D.cpp  VisualBoard.cpp  VisualPiece.cpp  gameMain.cpp  gui.cpp  main.cpp
src/BoardManager/: BitBoards.cpp  BoardManager.cpp  Move.cpp  Referee.cpp  Rules.cpp
src/CLIEngine/: CLIEngine.cpp  StandaloneUciPlayer.cpp
src/Engine/: ChessEngine.cpp  ChessPlayer.cpp  CommandHandlerBase.cpp  EngineBase.cpp  Evaluation.cpp  HumanPlayer.cpp  MainEngine.cpp  MoveGenerator.cpp  Piece.cpp  ProcessChessEngine.cpp  RepetitionTable.cpp  SearchHelpers.cpp  SearchTree.cpp  TestEngine.cpp  TranspositionTable.cpp  ZobristHash.cpp
src/EngineShared/: CMakeLists.txt  ChessPlayerAdapter.cpp  CommandHandlerBase.cpp  CommunicatorBase.cpp  StandaloneEngineWrapper.cpp  ZobristHash.cpp
src/EngineShared/UCIParsing/: Tokeniser.cpp  UciParser.cpp
src/GUI/: DrawableEntity.cpp  EvaluationBar.cpp  PromotionPiecePicker.cpp  VisualBoard.cpp  VisualPiece.cpp  gui.cpp
src/MagicBitBoardGen/: MagicBitboardGenerator.cpp  MagicNumberGenerator.cpp  mbbMain.cpp
src/MagicBitBoardGen/tests/: CMakeLists.txt  mbbGenTests.cpp
src/MagicBitboards/: MagicBitBoardShared.cpp  MagicBitBoards.cpp  MagicNumberGenerator.cpp  mbbMain.cpp
src/MatchManager/: ManagerCommandHandler.cpp  MatchManager.cpp
src/UCIParsing/: Tokeniser.cpp  UciParser.cpp
src/Utility/: ChessUtility.cpp  Fen.cpp  Vec2D.cpp
tests/: Amundsen.bok  AmundsenFen.bok  AmundsenReader.py  CMakeLists.txt  FenTests.cpp  Perft.cpp  UCIParserTests.cpp  bitboardTests.cpp  boardManagerTests.cpp  engineTests.cpp  getMovesFromPosition.py  humanPlayerTests.cpp  mbbTests.cpp  moveGetterSF.py  perftTestUtility.h  rulesTests.cpp  searchTreeTests.cpp
tests/CoreTests/: EPDParser.h  EPDTesting.cpp  FenTests.cpp  OpeningBookTests.cpp  Perft.cpp  RefereeTests.cpp  UCIParserTests.cpp  ZobristTests.cpp  bitboardTests.cpp  boardManagerTests.cpp  engineTests.cpp  humanPlayerTests.cpp  perftTestUtility.h  rulesTests.cpp  utilityTests.cpp
tests/MagicBitBoards/: mbbTests.cpp
tests/Python/: ExternalEnginePerftDivide.py  TestPerft.py  getMovesFromPosition.py  moveGetterSF.py  perftResultBuilder.py  toPGN.py
